2009-12-31  Henrik Sandklef  <hesa@sandklef.com>

	* configure.in: 
	Added AB_INIT
	Preparing for 3.06

	* build/autobuild.sh: 
	New file: Autobuild wrapper

2009-12-30  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/test/test-wrapper.sh: 
	exit instead of return 

	* libxnee/test/Makefile.am (TEST_WRAPPER): 
	Adding "./" to test-wrapper.sh since we don't want to add . to PATH


2009-12-29  Henrik Sandklef  <hesa@sandklef.com>

	* Makefile.am (check): 
	Cleaner calls to test targets in libxnee and cnee
	target check will (soon) not rely on X
	target xcheck will need X

	* libxnee/test/Makefile.am: 
	Put test-wrapper in a var
	Made separate test when requesting to test with X

	* libxnee/test/test_setget.h: 
	Casts to int before print

	* libxnee/test/Makefile.am: 
	Calling test programs through test-wrapper.sh

	* cnee/test/test_all.sh: 
	No args is handled better

	* cnee/test/etc/base_funs: 
	Added handling of no X up 
	Function decl./def now in bourne shell syntax

	* cnee/test/scripts/options/print-error-name.sh: 
	* cnee/test/scripts/options/print-error-names.sh: 
	Redirect misleading (from negative tests) error messages 

	* cnee/test/scripts/options/print-event-name-human.sh:
	Removed test of non existing event

2009-12-26  Henrik Sandklef  <hesa@sandklef.com>

	* configure.in: 
	gtk/gnomeui cflags/ldflags fixes
	* configure.in:
	More fixes to get get rid of pkg-config deps, when not needing it

2009-12-22  Henrik Sandklef  <hesa@sandklef.com>

	* Makefile.cvs (generate): 
	Creating autotools dir before generating configure script
	Works better with buildbot

2009-12-21  Henrik Sandklef  <hesa@sandklef.com>

	* Makefile.cvs (generate): 
	Telling user to run configure with --enable-doc option set

2009-12-20  Henrik Sandklef  <hesa@sandklef.com>

	* README.cvs: 
	New file: "Information on where to find info on building from CVS"

	* README: 
	More info about GNU Xnee
	Added info on building from CVS

	* BUGS: 
	Better info on bug reporting
